--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   server:
     build:
       context: .
-    container_name: template-webserver
+    container_name: restaurant-webserver
     ports:
       - 80:80
     restart: always
@@ -14,25 +14,25 @@ services:
     env_file:
       - ./docker.env
     networks:
-      - template
+      - restaurant
 
   ## Mariadb service
   database:
     image: mariadb:10.4.2
-    container_name: template-database
+    container_name: restaurant-database
     restart: always
     volumes:
       - ./database:/docker-entrypoint-initdb.d/
-      - template_data:/var/lib/mysql
+      - restaurant_data:/var/lib/mysql
     env_file:
       - ./docker.env
     networks:
-      - template
+      - restaurant
 
   ## PhpMyAdmin
   myadmin:
     image: phpmyadmin/phpmyadmin:4.8.1
-    container_name: template-phpmyadmin
+    container_name: restaurant-phpmyadmin
     ports:
       - 8081:80
     restart: always
@@ -41,10 +41,10 @@ services:
     depends_on:
       - database
     networks:
-      - template
+      - restaurant
 
 networks:
-  template:
+  restaurant:
 
 volumes:
-  template_data:
+  restaurant_data:
